     "sounds", WML authors must avoid to put cfg files there (or manually
     refresh their cache if they really want to place and edit cfg files there)
   * using "next-unit" on the last unit now triggers the selection effect each
     time (instead of half the times)
   * fix some latency for clearing fogged corners on shrouded maps
   * optimization of the pathfinding and unit loading

Version 1.3.12:
 * campaigns:
   * The Rise of Wesnoth:
     * 'A New Land' can now be won by waiting till turns run out
 * language and i18n:
   * updated translations: Czech, Danish, Finnish, French, Italian, Polish,
     Swedish
 * map editor and terrains:
   * added village count to editor
 * multiplayer:
   * revised maps: Caves of the Basilisk, Cynsaun Battlefield, Den of Onis,
     Fallenstar Lake, Hamlets, Hornshark Island, Sablestone Delta, Silverhead
     Crossing, Sulla's Ruins, The Freelands, Weldyn Channel, Alirok Marsh,
     Island of the Horatii, 3p Morituri, Blue Water Province, Castle Hopping
     Isle, Clash, King of the Hill, Lagoon, Loris River, 4p Morituri, Paths of
     Daggers, Siege Castles, The Wilderlands, Xanthe Chaos, Forest of Fear,
     Amohsad Caldera, Hexcake, Waterloo Sunset, 8p Morituri, Merkwuerdigliebe
 * sound:
   * added new music track, "Vengeful Pursuit" by Jeremy Nicoll.
   * added new music track, "Variations on an Elvish theme" by Doug Kaufman.
 * units:
   * balancing changes:
     * increased the HP of the White Mage from 32 to 35
     * decreased the ranged attack of the White Mage from 7-4 to 9-3
     * increased the melee attack of the White Mage from 6-1 to 6-2
     * increased the HP of the Mage of Light from 42 to 47
     * changed the ranged attack of the Mage of Light from 9-4 to 12-3
     * decreased the melee attack of the Royal Guard from 12-4 to 11-4
     * decreased the melee attack of the Merman Warrior from 8-4 to 10-3
     * decreased the pierce melee attack of the Merman Triton from 11-4 to 14-3